--- a/{{ cookiecutter.project_slug }}/frontend/templates/components/messages.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/components/messages.html
@@ -1,13 +1,13 @@
-{% if messages %}
+{{ "{% if messages %}" }}
 <div data-controller="reveal" data-reveal-target="item" class="relative bg-green-600">
   <div class="px-3 py-3 mx-auto max-w-7xl sm:px-6 lg:px-8">
     <div class="pr-16 sm:text-center sm:px-16">
-    {% for message in messages %}
+    {{ "{% for message in messages %}" }}
       <p class="font-medium text-white">
-        <span class="md:hidden"> {{ message }} </span>
-        <span class="hidden md:inline"> {{ message }} </span>
+        <span class="md:hidden"> {{ "{{ message }}" }} </span>
+        <span class="hidden md:inline"> {{ "{{ message }}" }} </span>
       </p>
-    {% endfor %}
+    {{ "{% endfor %}" }}
     </div>
     <div class="flex absolute inset-y-0 right-0 items-start pt-1 pr-1 sm:pt-1 sm:pr-2 sm:items-start">
       <button data-action="click->reveal#hide" type="button" class="flex p-2 rounded-md hover:bg-green-500 focus:outline-none focus:ring-2 focus:ring-white">
@@ -20,4 +20,4 @@
     </div>
   </div>
 </div>
-{% endif %}
+{{ "{% endif %}" }}
