--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/user-settings.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/user-settings.html
@@ -1,4 +1,4 @@
-{{ "{% extends "base.html" %}" }}
+{{ "{% extends 'base.html' %}" }}
 {{ "{% load webpack_loader static %}" }}
 {{ "{% load widget_tweaks %}" }}
 
@@ -8,7 +8,7 @@
 
 {{ "{% block content %}" }}
   <div class="container px-4 py-8 mx-auto max-w-3xl bg-white lg:min-w-0 md:pt-10 lg:flex-1">
-    {{ "{% include "components/confirm-email.html" with email_verified=email_verified %}" }}
+    {{ '{% include "components/confirm-email.html" with email_verified=email_verified %}' }}
     <div class="p-4 border-t border-b border-gray-200 sm:p-6 lg:p-8 xl:border-t-0">
       <div class="flex justify-between items-center">
         <h1 class="flex-1 pt-2 text-xl font-medium">Settings</h1>
@@ -28,19 +28,19 @@
                   <div class="col-span-6 sm:col-span-6">
                     {{ "{{ form.first_name.errors | safe }}" }}
                     <label for="{% raw %}{{ form.first_name.id_for_label }}{%- endraw %}" class="block text-sm font-medium text-gray-700">First name</label>
-                    {{ "{% render_field form.first_name id="first-name" name="first-name" type="text" autocomplete="given-name" class="block mt-1 w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" %}" }}
+                    {{ '{% render_field form.first_name id="first-name" name="first-name" type="text" autocomplete="given-name" class="block mt-1 w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" %}' }}
                   </div>
 
                   <div class="col-span-6 sm:col-span-6">
                     {{ "{{ form.last_name.errors | safe }}" }}
                     <label for="{% raw %}{{ form.last_name.id_for_label }}{%- endraw %}" class="block text-sm font-medium text-gray-700">Last name</label>
-                    {{ "{% render_field form.last_name id="last-name" name="last-name" type="text" autocomplete="family-name" class="block mt-1 w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" %}" }}
+                    {{ '{% render_field form.last_name id="last-name" name="last-name" type="text" autocomplete="family-name" class="block mt-1 w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" %}' }}
                   </div>
 
                   <div class="col-span-6 sm:col-span-6">
                     {{ "{{ form.email.errors | safe }}" }}
                     <label for="{% raw %}{{ form.email.id_for_label }}{%- endraw %}" class="block text-sm font-medium text-gray-700">Email address</label>
-                    {{ "{% render_field form.email id="email-address" name="email-address" type="email" autocomplete="email" class="block mt-1 w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" %}" }}
+                    {{ '{% render_field form.email id="email-address" name="email-address" type="email" autocomplete="email" class="block mt-1 w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" %}' }}
                   </div>
                 </div>
               </div>
