--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/user-settings.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/user-settings.html
@@ -22,7 +22,7 @@
           <form action="" method="post">
             {{ "{% csrf_token %}" }}
             <div class="overflow-hidden sm:rounded-md">
-              <div class="py-5 bg-white">
+              <div class="px-2 py-5 bg-white">
                 <div class="grid grid-cols-6 gap-6">
                   {{ "{{ form.non_field_errors }}" }}
                   <div class="col-span-6 sm:col-span-6">
