--- a/{{ cookiecutter.project_slug }}/frontend/templates/account/email_confirm.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/account/email_confirm.html
@@ -17,13 +17,13 @@
             {{ "{% user_display confirmation.email_address.user as user_display %}" }}
             {{ "{% if can_confirm %}" }}
                 <p class="mb-6 text-center">
-                    Please confirm that <a href="mailto:{% raw %}{{ confirmation.email_address.email }}{%- endraw %}" class="text-blue-600 hover:underline">{{ "{{ confirmation.email_address.email }}" }}</a> is an email address for user {{ "{{ user_display }}" }}.
+                    Please confirm that <a href="mailto:{% raw %}{{ confirmation.email_address.email }}{%- endraw %}" class="text-{{cookiecutter.project_main_color}}-600 hover:underline">{{ "{{ confirmation.email_address.email }}" }}</a> is an email address for user {{ "{{ user_display }}" }}.
                 </p>
                 {{ "{% url 'account_confirm_email' confirmation.key as action_url %}" }}
                 <form method="post" action="{% raw %}{{ action_url }}{%- endraw %}" class="flex justify-center">
                   {{ "{% csrf_token %}" }}
                     {{ "{{ redirect_field }}" }}
-                    <button type="submit" class="px-4 py-2 text-white bg-blue-600 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                    <button type="submit" class="px-4 py-2 text-white bg-{{cookiecutter.project_main_color}}-600 rounded-md hover:bg-{{cookiecutter.project_main_color}}-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-{{cookiecutter.project_main_color}}-500">
                         Confirm
                     </button>
                 </form>
@@ -35,7 +35,7 @@
         {{ "{% else %}" }}
             {{ "{% url 'account_email' as email_url %}" }}
             <p class="text-center">
-                This email confirmation link expired or is invalid. Please <a href="{% raw %}{{ email_url }}{%- endraw %}" class="text-blue-600 hover:underline">issue a new email confirmation request</a>.
+                This email confirmation link expired or is invalid. Please <a href="{% raw %}{{ email_url }}{%- endraw %}" class="text-{{cookiecutter.project_main_color}}-600 hover:underline">issue a new email confirmation request</a>.
             </p>
         {{ "{% endif %}" }}
     </div>
