--- a/{{ cookiecutter.project_slug }}/frontend/templates/base.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/base.html
@@ -11,7 +11,7 @@
 
   <!-- Other meta stuff -->
   <link rel="apple-touch-icon" href="{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %}" />
-  <link rel="apple-touch-icon" href="{% raw %}{% {static }'vendors/images/logo.png' %}{%- endraw %}" />
+  <link rel="apple-touch-icon" href="{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %}" />
   <link rel="icon" type="image/png" sizes="16x16 32x32 500x500" href="{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %}" />
 
   {{ "{% block meta %}" }}
