--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/home.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/home.html
@@ -19,5 +19,15 @@
   </div>
 </div>
 
-<div data-controller="testing"></div>
+{{ "{% if show_confetti %}" }}
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+<script>
+  confetti({
+    particleCount: 100,
+    spread: 70,
+    origin: { y: 0.6 }
+  });
+</script>
+{{ "{% endif %}" }}
+
 {{ "{% endblock content %}" }}
