--- a/{{ cookiecutter.project_slug }}/frontend/templates/account/login.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/account/login.html
@@ -80,10 +80,10 @@
                   </button>
                 </form>
               </div>
-              {% endif -%}
+              {% endif %}
 
             </div>
-            {% endif -%}
+            {% endif %}
 
         </div>
     </div>
