--- a/{{ cookiecutter.project_slug }}/frontend/templates/account/signup.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/account/signup.html
@@ -91,10 +91,10 @@
             </button>
           </form>
         </div>
-        {% endif -%}
+        {% endif %}
 
       </div>
-      {% endif -%}
+      {% endif %}
 
 
     </div>
