--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/home.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/home.html
@@ -10,7 +10,7 @@
         <div class="flex flex-col gap-x-6 justify-center items-center mt-10 md:flex-row md:items-end">
           <a
             class="block px-3 py-2 text-sm font-semibold text-white bg-{{cookiecutter.project_main_color}}-600 rounded-md shadow-sm hover:bg-{{cookiecutter.project_main_color}}-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-{{cookiecutter.project_main_color}}-600"
-            href="{% raw %}{% url 'account_login' %}{%- endraw %}"
+            href="{% raw %}{% url 'account_signup' %}{%- endraw %}"
           >
             Get Started
           </a>
