--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/user-settings.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/user-settings.html
@@ -53,7 +53,7 @@
       </div>
     </div>
     {{ "{% endif %}" }}
-    {% endif -%}
+    {% endif %}
 
     <div class="px-6 py-4">
       <div class="flex flex-col">
