--- a/{{ cookiecutter.project_slug }}/frontend/templates/base.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/base.html
@@ -51,11 +51,50 @@
 
         <!-- Small Screen -->
         <div class="flex justify-between items-center w-full lg:hidden">
-          <!-- App logo (center) -->
-          <a href="{% raw %}{% url 'home' %}{%- endraw %}" class="flex flex-row justify-center items-center p-1.5 -m-1.5 space-x-2">
-            <img class="w-auto h-8" src="{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %}" alt="{{ cookiecutter.project_name }} Logo" />
-            <span class="text-base font-semibold text-gray-700">{{ cookiecutter.project_name }}</span>
-          </a>
+
+          <div class="relative">
+            <div data-controller="dropdown">
+              <button type="button" data-action="dropdown#toggle click@window->dropdown#hide" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
+                <span class="sr-only">Open user menu</span>
+                <svg class="w-6 h-6 group-[.open]:hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                </svg>
+                <svg class="hidden w-6 h-6 group-[.open]:block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                </svg>
+              </button>
+              <div data-dropdown-target="menu" class="hidden lg:hidden" role="dialog" aria-modal="true">
+                <!-- Background backdrop, show/hide based on slide-over state. -->
+                <div class="fixed inset-0 z-10"></div>
+                <div class="overflow-y-auto fixed inset-y-0 right-0 z-10 px-6 py-6 w-full bg-white sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
+                  <div class="flex justify-start items-center">
+                    <button data-action="dropdown#toggle click@window->dropdown#hide" type="button">
+                      <span class="sr-only">Close menu</span>
+                      <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                      </svg>
+                    </button>
+                  </div>
+                  <div class="flow-root mt-6">
+                    <div class="flex flex-col justify-start space-y-1">
+                      <a href="{% raw %}{% url 'home' %}{%- endraw %}" class="flex flex-row justify-center items-center p-1.5 -m-1.5 mb-2 space-x-2">
+                        <img class="w-auto h-8" src="{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %}" alt="OSIG Logo" />
+                        <span class="text-base font-semibold text-gray-700">OSIG</span>
+                      </a>
+                      <a href="{% raw %}{% url 'home' %}{%- endraw %}" class="px-3 py-2.5 -mx-3 text-base font-semibold leading-7 text-center text-gray-900 rounded-lg hover:bg-gray-50">
+                        Home
+                      </a>
+                      {% if cookiecutter.use_stripe == 'y' -%}
+                      <a href="{% raw %}{% url 'pricing' %}{%- endraw %}" class="px-3 py-2.5 -mx-3 text-base font-semibold leading-7 text-center text-gray-900 rounded-lg hover:bg-gray-50">
+                        Pricing
+                      </a>
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <!-- Profile dropdown (right) -->
           <div class="relative">
@@ -125,44 +164,49 @@
               <span class="text-base font-semibold text-gray-700">{{ cookiecutter.project_name }}</span>
             </a>
           </div>
-          {{ "{% if user.is_authenticated %}" }}
-          <!-- Profile dropdown -->
-          <div data-controller="dropdown" class="relative ml-3">
-            <div>
-              <button type="button" data-action="dropdown#toggle click@window->dropdown#hide"
-                class="flex text-sm bg-gray-800 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
-                id="user-menu-button" aria-expanded="false" aria-haspopup="true">
-                <span class="sr-only">Open user menu</span>
-                <img class="object-cover p-1 w-10 h-10 bg-gray-100 rounded-full border-2 border-gray-500"
-                  src="{% raw %}{% static 'vendors/images/unknown-man.png' %}{%- endraw %}" alt="No Personal Photo" />
-              </button>
-            </div>
-            <div data-dropdown-target="menu"
-              class="hidden absolute right-0 z-10 py-1 mt-2 w-48 bg-white rounded-md ring-1 ring-black ring-opacity-5 shadow-lg origin-top-right focus:outline-none"
-              role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-              <a href="{% raw %}{% url 'settings' %}{%- endraw %}" class="flex justify-start px-4 py-2 w-full text-sm text-gray-700 hover:bg-gray-300">
-                Settings
-              </a>
-              <form method="post" action="{% raw %}{% url 'account_logout' %}{%- endraw %}">
-                {{ "{% csrf_token %}" }}
-                <button
-                  class="flex justify-start px-4 py-2 w-full text-sm text-gray-700 hover:bg-gray-300"
-                  role="menuitem"
-                  data-action="dropdown#toggle"
-                  tabindex="-1"
-                  id="user-menu-item-2"
-                  type="submit"
-                >
-                    Sign Out
+          <div class="flex items-center space-x-8">
+            <a href="{% raw %}{% url 'pricing' %}{%- endraw %}" class="text-base font-semibold leading-6 text-gray-900 hover:text-gray-700">
+              Pricing
+            </a>
+            {{ "{% if user.is_authenticated %}" }}
+            <!-- Profile dropdown -->
+            <div data-controller="dropdown" class="relative ml-3">
+              <div>
+                <button type="button" data-action="dropdown#toggle click@window->dropdown#hide"
+                  class="flex text-sm bg-gray-800 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
+                  id="user-menu-button" aria-expanded="false" aria-haspopup="true">
+                  <span class="sr-only">Open user menu</span>
+                  <img class="object-cover p-1 w-10 h-10 bg-gray-100 rounded-full border-2 border-gray-500"
+                    src="{% raw %}{% static 'vendors/images/unknown-man.png' %}{%- endraw %}" alt="No Personal Photo" />
                 </button>
-              </form>
+              </div>
+              <div data-dropdown-target="menu"
+                class="hidden absolute right-0 z-10 py-1 mt-2 w-48 bg-white rounded-md ring-1 ring-black ring-opacity-5 shadow-lg origin-top-right focus:outline-none"
+                role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
+                <a href="{% raw %}{% url 'settings' %}{%- endraw %}" class="flex justify-start px-4 py-2 w-full text-sm text-gray-700 hover:bg-gray-300">
+                  Settings
+                </a>
+                <form method="post" action="{% raw %}{% url 'account_logout' %}{%- endraw %}">
+                  {{ "{% csrf_token %}" }}
+                  <button
+                    class="flex justify-start px-4 py-2 w-full text-sm text-gray-700 hover:bg-gray-300"
+                    role="menuitem"
+                    data-action="dropdown#toggle"
+                    tabindex="-1"
+                    id="user-menu-item-2"
+                    type="submit"
+                  >
+                      Sign Out
+                  </button>
+                </form>
+              </div>
             </div>
+            {{ "{% else %}" }}
+            <a href="{% raw %}{% url 'account_login' %}{%- endraw %}" class="text-base font-semibold leading-6 text-gray-900">
+                Log in <span aria-hidden="true">&rarr;</span>
+            </a>
+            {{ "{% endif %}" }}
           </div>
-          {{ "{% else %}" }}
-          <a href="{% raw %}{% url 'account_login' %}{%- endraw %}" class="text-base font-semibold leading-6 text-gray-900">
-              Log in <span aria-hidden="true">&rarr;</span>
-          </a>
-          {{ "{% endif %}" }}
         </div>
 
       </nav>
