--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/pricing.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/pricing.html
@@ -1,5 +1,28 @@
 {% extends "base.html" %}
 {% load webpack_loader static %}
+
+{% block meta %}
+<title>{{ cookiecutter.project_name }} - Pricing</title>
+<meta name="description" content="How much to use {{ cookiecutter.project_name }}?" />
+<meta name="keywords" content="" />
+<meta name="robots" content="index, follow" />
+<link rel="canonical" href="{% raw %}https://{{ request.get_host }}{% url 'pricing' %}" {% -endraw %}/>
+
+<meta property="og:type" content="website" />
+<meta property="og:title" content="{{ cookiecutter.project_name }} - Pricing" />
+<meta property="og:url" content="{% raw %}https://{{ request.get_host }}{% url 'pricing' %}" {% -endraw %}/>
+<meta property="og:description" content="How much to use {{ cookiecutter.project_name }}?" />
+<meta property="og:image" content="https://osig.app/g?site=x&style=logo&font=markerfelt&title={{ cookiecutter.project_name }} - Pricing&subtitle=How much to use {{ cookiecutter.project_name }}?&image_url=https://{{ '{{ request.get_host }}' }}{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %}" />
+<meta property="og:locale" content="en_US" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:creator" content="@rasulkireev" />
+<meta name="twitter:site" content="@rasulkireev" />
+<meta name="twitter:title" content="{{ cookiecutter.project_name }} - Pricing" />
+<meta name="twitter:description" content="How much to use {{ cookiecutter.project_name }}?" />
+<meta name="twitter:image" content="https://osig.app/g?site=x&style=logo&font=markerfelt&title={{ cookiecutter.project_name }} - Pricing&subtitle=How much to use {{ cookiecutter.project_name }}?&image_url=https://{{ '{{ request.get_host }}' }}{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %}" />
+{% endblock meta %}
+
 {% block content %}
 <div class="py-24 bg-white sm:py-32">
   <div class="px-6 mx-auto max-w-7xl lg:px-8">
@@ -122,3 +145,22 @@
   </div>
 </div>
 {% endblock content %}
+
+{% block schema %}
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "{{ cookiecutter.project_name }} - Pricing",
+    "description": "How much to use {{ cookiecutter.project_name }}?",
+    "thumbnailUrl": "https://osig.app/g?site=x&style=logo&font=markerfelt&title={{ cookiecutter.project_name }} - Pricing&subtitle=How much to use {{ cookiecutter.project_name }}?&image_url=https://{{ '{{ request.get_host }}' }}{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %}",
+    "url": "{% raw %}https://{{ request.get_host }}{% url 'pricing' %}{% -endraw %}",
+    "author": {
+      "@type": "Person",
+      "givenName": "Rasul",
+      "familyName": "Kireev",
+      "url": "https://rasulkireev.com/"
+    }
+  }
+  </script>
+{% endblock schema %}
